<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Advanced_beauty_filter">Filter</string>
    <string name="Advanced_beauty_relighting">Lighting</string>
    <string name="Advanced_beauty_skin_tone">Skin tone</string>
    <string name="accessibility_beautyshot_bar">Beauty shot control bar</string>
    <string name="accessibility_seek_button">seek button</string>
    <string name="accessibility_shutter_button">Shutter</string>
    <string name="accessibility_zoom_bar">Zoom control bar</string>
    <string name="accessibility_zoom_control">Zoom control</string>
    <string name="accessiblity_mode_button">Mode</string>
    <string name="accessiblity_pause_recording">Pause recording</string>
    <string name="accessiblity_start_recording">Start recording</string>
    <string name="accessiblity_stop_recording">Stop recording</string>
    <string name="add">Add</string>
    <string name="add_images">Add image</string>
    <string name="add_sample">New guide</string>
    <string name="advanced_selfie_filter_bright">Bright</string>
    <string name="advanced_selfie_filter_calm">Calm</string>
    <string name="advanced_selfie_filter_chic">Chic</string>
    <string name="advanced_selfie_filter_classic">Classic</string>
    <string name="advanced_selfie_filter_cool">Cool</string>
    <string name="advanced_selfie_filter_deep">Deep</string>
    <string name="advanced_selfie_filter_mellow">Mellow</string>
    <string name="advanced_selfie_filter_pure">Pure</string>
    <string name="advanced_selfie_filter_romantic">Romantic</string>
    <string name="ae_af_lock">AE/AF lock</string>
    <string name="ae_lock">AE lock</string>
    <string name="ae_lock_off">AE lock off</string>
    <string name="ae_lock_off_button">AE lock off button</string>
    <string name="ae_lock_on">AE lock on</string>
    <string name="ae_lock_on_button">AE lock on button</string>
    <string name="ai_cam2">AI CAM</string>
    <string name="ai_cam_effect_cannot_apply">The text effect are not applied when recording.</string>
    <string name="ai_cam_init_guide">AI CAM automatically recognizes the subject and applies the best effect.\10\101. Point the camera at your subject.\102. Words related to your subject will appear on the screen and a effect will be applied.\103. Tap the Scene icon to try different effects.\10\10AI CAM can recognize the following subjects.\10- Person, people, baby\10- Pet, animal\10- Sunrise, sunset, landscape, city, snow, sky, beach, night sky, low light\10- Food, beverage, fruit, flower, text</string>
    <string name="aicam_auto_scene">Auto</string>
    <string name="all_auto_desc">Reset</string>
    <string name="alpha_guide_text">Follow the guide to take a photo</string>
    <string name="aperture">Aperture</string>
    <string name="app_name">Camera</string>
    <string name="assistant_mode_not_downloaded">Mode not downloaded. Recording in Auto mode...</string>
    <string name="assistant_night_vision_over_10lux">Set to night vision according to the environment.</string>
    <string name="auto">Auto</string>
    <string name="auto_button">Auto button</string>
    <string name="auto_mode_button">Auto mode</string>
    <string name="auto_mode_recording_on_max_power_saving_toast">Camera run in Auto mode using Maximum mode of Battery saver.</string>
    <string name="auto_selfie_button">Auto shot button</string>
    <string name="auto_selfie_help_title">Auto shot</string>
    <string name="auto_selfie_not_work_in_negative_filter1">Cannot take Auto shot with Negative.</string>
    <string name="back_button">Back button</string>
    <string name="basic_button">Basic button</string>
    <string name="basic_quick_view_mode_button">Basic</string>
    <string name="black_and_white">Black &amp; White</string>
    <string name="black_and_white_off">Black &amp; White off</string>
    <string name="block_recording_and_cheeseshutter_mdm">Video recording and Cheese shutter are unavailable by server policy.</string>
    <string name="block_recording_mdm">Video recording is unavailable by server policy.</string>
    <string name="bluetooth_mic">Bluetooth Mic.</string>
    <string name="bookmark_thumbnail_view">Thumbnails</string>
    <string name="bright_mode_toast_auto_off">The bright mode is automatically turned off because the surroundings are bright.</string>
    <string name="bright_mode_toast_auto_on">The bright mode is automatically turned on because the surroundings are dark.</string>
    <string name="bright_mode_toast_burst_limitation">Cannot take burst shot in Bright mode.</string>
    <string name="bright_mode_toast_manual_off">The bright mode has been turned off.</string>
    <string name="bright_mode_toast_manual_on">The bright mode has been turned on.</string>
    <string name="bright_mode_toast_suggestion">Tap this icon to take photos brightly in the dark.</string>
    <string name="bright_mode_toast_suggestion_rev2">Tap %s to take photos brightly in the dark.</string>
    <string name="bright_mode_toast_suggestion_talkback">Tap this icon to take photos brightly in the dark.</string>
    <string name="brightness">Brightness</string>
    <string name="brightness_btn">Brightness button</string>
    <string name="btn_food_wb_PrDdefault">WB</string>
    <string name="burstshot_viewer">Burst shot viewer</string>
    <string name="button">button</string>
    <string name="cam_plus_help_title">CAM Plus</string>
    <string name="camera_accessibility_back_button">Back</string>
    <string name="camera_accessibility_stop_button">Stop</string>
    <string name="camera_application_stopped">Camera stopped.</string>
    <string name="camera_cz_cine_zoom">Cine zoom</string>
    <string name="camera_cz_guide_zoom">When you start a video, it automatically zooms in to the area of the box.</string>
    <string name="camera_cz_guide_zoom_out">When you tap the start button, it automatically zooms out to the first state.</string>
    <string name="camera_cz_guide_zoom_start">When you tap the start button, it automatically zooms in to the area of the box.</string>
    <string name="camera_cz_pause">Pause</string>
    <string name="camera_cz_pinch_zoom_disable">Zoom gesture does not work in Cine zoom.</string>
    <string name="camera_cz_pinch_zoom_not_support">Tap an area and drag the slider to zoom.</string>
    <string name="camera_cz_pinch_zoom_not_work">Zoom gesture does not work in Cine zoom.</string>
    <string name="camera_cz_point_zoom">Point zoom</string>
    <string name="camera_cz_point_zoom_off">Point zoom is off.</string>
    <string name="camera_cz_reset">Cine zoom is off.</string>
    <string name="camera_cz_speed">Speed</string>
    <string name="camera_cz_start">Start</string>
    <string name="camera_cz_tap_area_drag_slider1">Tap an area and drag the slider to zoom.</string>
    <string name="camera_cz_tap_to_zoom_in">Tap the area to zoom in on.</string>
    <string name="camera_cz_zoom_in">Zoom in</string>
    <string name="camera_cz_zoom_out">Zoom out</string>
    <string name="camera_device_error_acturator">- The AF ERROR. The Actuator component have issue.</string>
    <string name="camera_device_error_aperture">- The Dragon ERROR. The Dragon component have issue.</string>
    <string name="camera_device_error_camera_sensor">- The Camera Swipe ERROR. The Camera Sensor have issue.</string>
    <string name="camera_device_error_eeprom">- The AF and Image Quality ERROR. The EEPROM component have issue.</string>
    <string name="camera_device_error_laser_proxy">- The AF ERROR. The LDAF component have issue.</string>
    <string name="camera_disabled">Camera has been disabled because of security policies.</string>
    <string name="camera_driver_needs_reset">Camera has stopped unexpectedly, need to restart.</string>
    <string name="camera_error_occurred_try_again">Camera unavailable for a while due to temporary problem. Try again.</string>
    <string name="camera_error_title">Camera error</string>
    <string name="camera_frame_grid">Frame grid</string>
    <string name="camera_gapless_toast">Up to 4 GB can be saved for file. Recording to new file…</string>
    <string name="camera_help_activity_cheese_shutter1">Cheese shutter</string>
    <string name="camera_help_activity_gesture_view">Gesture view</string>
    <string name="camera_help_activity_gesture_view_title1">Gesture view</string>
    <string name="camera_help_activity_interval_shot2">Interval shot</string>
    <string name="camera_help_activity_normal_shot">Take photos or record videos</string>
    <string name="camera_help_activity_normal_shot_desc_postfix">Tap anywhere on the screen to take a photo when buttons are hidden in Clean view.</string>
    <string name="camera_help_activity_raw">Save as RAW</string>
    <string name="camera_help_activity_tap_shot">Use Tap shot</string>
    <string name="flash_jumpcut_titleid">Number of shots button %d</string>
    <string name="initial_guide_title_point_zoom">Point Zoom</string>
    <string name="manual_audio_directivity_title">Directivity</string>
    <string name="manual_focus">Manual focus</string>
    <string name="multiview_layout_quadview">Quad-view</string>
    <string name="multiview_layout_selection">Multiview recording Layout</string>
    <string name="multiview_layout_single">Single-view</string>
    <string name="multiview_layout_splitview">Dual-view</string>
    <string name="multiview_layout_tripleview01">Triple-view 1</string>
    <string name="multiview_layout_tripleview02">Triple-view 2</string>
    <string name="popout_blur">Lens Blur</string>
    <string name="popout_perspective">Fisheye</string>
    <string name="popout_vignetting">Vignette</string>
    <string name="shutter_speed">Shutter speed</string>
    <string name="sp_flash_jumpcut_shot_12">12 shots</string>
    <string name="sp_flash_jumpcut_shot_16">16 shots</string>
    <string name="sp_flash_jumpcut_shot_20">20 shots</string>
    <string name="sp_flash_jumpcut_shot_4">4 shots</string>
    <string name="sp_flash_jumpcut_shot_8">8 shots</string>
    <string name="sp_time_lapse_speed_10">10 times faster</string>
    <string name="sp_time_lapse_speed_15">15 times faster</string>
    <string name="sp_time_lapse_speed_30">30 times faster</string>
    <string name="sp_time_lapse_speed_60">60 times faster</string>
    <string name="switch_to_ae_lock_on_off">Switch to AE Lock On, off</string>
    <string name="time_lapse_speed_titleid">Recording speed Button %d</string>
    <string name="white_balance">White balance</string>
    <string name="iso_accessibility">I S O</string>
</resources>