<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:lge="http://schemas.android.com/apk/res/com.lge.camera" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="end" android:id="@c0086id/flash_jumpcut_shot_selector_layout" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
    <RelativeLayout android:id="@c0086id/flash_jumpcut_child_view" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <LinearLayout android:id="@c0086id/flash_jumpcut_child_item_view" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <com.lge.camera.components.RotateImageButton android:id="@c0086id/flash_jumpcut_shot20_btn" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@c0085drawable/setting_flash_jumpcut_shot_20" android:contentDescription="@string/sp_flash_jumpcut_shot_20"/>
            <com.lge.camera.components.RotateImageButton android:id="@c0086id/flash_jumpcut_shot16_btn" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@c0085drawable/setting_flash_jumpcut_shot_16" android:contentDescription="@string/sp_flash_jumpcut_shot_16"/>
            <com.lge.camera.components.RotateImageButton android:id="@c0086id/flash_jumpcut_shot12_btn" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@c0085drawable/setting_flash_jumpcut_shot_12" android:contentDescription="@string/sp_flash_jumpcut_shot_12"/>
            <com.lge.camera.components.RotateImageButton android:id="@c0086id/flash_jumpcut_shot8_btn" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@c0085drawable/setting_flash_jumpcut_shot_8" android:contentDescription="@string/sp_flash_jumpcut_shot_8"/>
            <com.lge.camera.components.RotateImageButton android:id="@c0086id/flash_jumpcut_shot4_btn" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@c0085drawable/setting_flash_jumpcut_shot_4" android:contentDescription="@string/sp_flash_jumpcut_shot_4"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout android:id="@c0086id/flash_jumpcut_parent_view" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toEndOf="@c0086id/flash_jumpcut_child_view">
        <ImageView android:id="@c0086id/flash_jumpcut_parent_item_arrow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@c0085drawable/camera_icon_setting_multiview_arrow" android:layout_centerVertical="true"/>
        <com.lge.camera.components.RotateImageButton android:id="@c0086id/flash_jumpcut_parent_item_btn" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@c0085drawable/setting_flash_jumpcut_shot_4" android:contentDescription="@string/flash_jumpcut_titleid" android:layout_marginEnd="@dimen/quick_button_margin" android:layout_toEndOf="@c0086id/flash_jumpcut_parent_item_arrow"/>
    </RelativeLayout>
</RelativeLayout>
