<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:lge="http://schemas.android.com/apk/res/com.lge.camera" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@c0086id/multi_view_layout_selector_layout" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@c0086id/multi_view_layout_parent_item_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/multi_view_selector_layout_margin_top" android:layout_alignParentEnd="true">
        <ImageView android:id="@c0086id/multi_view_layout_parent_item_arrow" android:focusable="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@c0085drawable/camera_icon_setting_multiview_arrow_down" android:layout_centerVertical="true" android:layout_marginEnd="@dimen/multi_view_parent_item_arrow_margin_end"/>
        <com.lge.camera.components.RotateImageButton android:id="@c0086id/multi_view_layout_parent_item_selected" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@c0085drawable/setting_multiview_layout_single" android:contentDescription="@string/multiview_layout_selection" android:layout_marginEnd="@dimen/multi_view_parent_item_margin_end" android:layout_toEndOf="@c0086id/multi_view_layout_parent_item_arrow"/>
    </RelativeLayout>
    <RelativeLayout android:id="@c0086id/multi_view_layout_child_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignTop="@c0086id/multi_view_layout_parent_item_view" android:layout_toStartOf="@c0086id/multi_view_layout_parent_item_view">
        <LinearLayout android:id="@c0086id/multi_view_layout_child_view" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <com.lge.camera.components.RotateImageButton android:id="@c0086id/multi_view_layout_quad" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@c0085drawable/setting_multiview_layout_quad" android:contentDescription="@string/multiview_layout_quadview" android:layout_marginEnd="@dimen/multi_view_speed_margin_end"/>
            <com.lge.camera.components.RotateImageButton android:id="@c0086id/multi_view_layout_triple2" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@c0085drawable/setting_multiview_layout_triple2" android:contentDescription="@string/multiview_layout_tripleview02" android:layout_marginEnd="@dimen/multi_view_speed_margin_end"/>
            <com.lge.camera.components.RotateImageButton android:id="@c0086id/multi_view_layout_triple1" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@c0085drawable/setting_multiview_layout_triple1" android:contentDescription="@string/multiview_layout_tripleview01" android:layout_marginEnd="@dimen/multi_view_speed_margin_end"/>
            <com.lge.camera.components.RotateImageButton android:id="@c0086id/multi_view_layout_split" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@c0085drawable/setting_multiview_layout_split" android:contentDescription="@string/multiview_layout_splitview" android:layout_marginEnd="@dimen/multi_view_speed_margin_end"/>
            <com.lge.camera.components.RotateImageButton android:id="@c0086id/multi_view_layout_single" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@c0085drawable/setting_multiview_layout_single" android:contentDescription="@string/multiview_layout_single" android:layout_marginEnd="@dimen/multi_view_speed_margin_end"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
