<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:lge="http://schemas.android.com/apk/res/com.lge.camera" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_gravity="center_vertical" android:orientation="vertical" android:id="@c0086id/popout_button_layout" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layoutDirection="ltr" android:layout_marginStart="@dimen/popout_effect_btn_margin_start">
    <com.lge.camera.components.RotateImageButton android:id="@c0086id/btn_popout_effect_perspective" android:background="#00000000" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@c0085drawable/btn_popout_effect_perspective" android:contentDescription="@string/popout_perspective" android:layoutDirection="ltr" style="@style/popout_effect_btn_item"/>
    <View android:layout_width="0dp" android:layout_height="@dimen/popout_effect_btn_between"/>
    <com.lge.camera.components.RotateImageButton android:id="@c0086id/btn_popout_effect_grayscale" android:background="#00000000" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@c0085drawable/btn_popout_effect_grayscale" android:contentDescription="@string/black_and_white" android:layoutDirection="ltr" style="@style/popout_effect_btn_item"/>
    <View android:layout_width="0dp" android:layout_height="@dimen/popout_effect_btn_between"/>
    <com.lge.camera.components.RotateImageButton android:id="@c0086id/btn_popout_effect_vignetting" android:background="#00000000" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@c0085drawable/btn_popout_effect_vignetting" android:contentDescription="@string/popout_vignetting" android:layoutDirection="ltr" style="@style/popout_effect_btn_item"/>
    <View android:layout_width="0dp" android:layout_height="@dimen/popout_effect_btn_between"/>
    <com.lge.camera.components.RotateImageButton android:id="@c0086id/btn_popout_effect_blur" android:background="#00000000" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@c0085drawable/btn_popout_effect_blur" android:contentDescription="@string/popout_blur" android:layoutDirection="ltr" style="@style/popout_effect_btn_item"/>
</LinearLayout>
