<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:lge="http://schemas.android.com/apk/res/com.lge.camera" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@c0086id/manual_panel_layout" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="bottom" android:id="@c0086id/manual_panel_left" android:layout_width="wrap_content" android:layout_height="@dimen/manual_panel_button_height">
        <LinearLayout android:gravity="end" android:id="@c0086id/manual_panel_empty_area" android:background="@c0085drawable/bg_manual_graph" android:layout_width="wrap_content" android:layout_height="match_parent">
            <com.lge.camera.components.RotateLayout android:id="@c0086id/manual_info_layout_rotate" android:layout_width="match_parent" android:layout_height="match_parent">
                <RelativeLayout android:gravity="end" android:id="@c0086id/manual_info_layout" android:layout_width="match_parent" android:layout_height="match_parent">
                    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@c0086id/manual_video_setting_info" android:visibility="gone" android:layout_width="@dimen/manual_panel_video_info_width" android:layout_height="match_parent" android:paddingStart="8dp">
                        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                            <TextView android:textAppearance="@style/manual_video_info" android:id="@c0086id/manual_video_setting_resolution" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="FHD"/>
                            <TextView android:textAppearance="@style/manual_video_info" android:id="@c0086id/manual_video_setting_frame_rate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="15f" android:layout_marginStart="2.5dp"/>
                        </LinearLayout>
                        <TextView android:textAppearance="@style/manual_video_info" android:ellipsize="none" android:id="@c0086id/manual_video_setting_bitrate" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="30Mbps" android:singleLine="true"/>
                        <TextView android:textAppearance="@style/manual_video_info" android:ellipsize="none" android:id="@c0086id/manual_video_setting_type" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="LOG" android:singleLine="true"/>
                    </LinearLayout>
                    <TextView android:textAppearance="@style/manual_video_info" android:layout_gravity="center_vertical" android:id="@c0086id/manual_info_text_aperture" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="F1.8" android:layout_marginEnd="@dimen/manual_panel_aperture_text_margin_end"/>
                </RelativeLayout>
            </com.lge.camera.components.RotateLayout>
        </LinearLayout>
        <com.lge.camera.components.ManualPanelButton android:id="@c0086id/manual_panel_audio" android:background="#00000000" android:visibility="gone" android:layout_width="@dimen/manual_video_audio_panel_button_width" android:layout_height="match_parent" android:src="@c0085drawable/btn_manual_panel_audio" android:scaleType="centerInside" android:contentDescription="@string/manual_audio_directivity_title" style="@style/manual_panel_button"/>
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:id="@c0086id/manual_panel_button_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toEndOf="@c0086id/manual_panel_left">
        <com.lge.camera.components.ManualPanelButton android:id="@c0086id/manual_panel_wb" android:background="#00000000" android:layout_width="@dimen/manual_panel_button_width" android:layout_height="@dimen/manual_panel_button_height" android:src="@c0085drawable/btn_manual_panel" android:scaleType="fitXY" android:contentDescription="@string/white_balance" style="@style/manual_panel_button"/>
        <com.lge.camera.components.ManualPanelButton android:id="@c0086id/manual_panel_mf" android:background="#00000000" android:layout_width="@dimen/manual_panel_button_width" android:layout_height="@dimen/manual_panel_button_height" android:src="@c0085drawable/btn_manual_panel" android:scaleType="fitXY" android:contentDescription="@string/manual_focus" style="@style/manual_panel_button"/>
        <com.lge.camera.components.ManualPanelButton android:id="@c0086id/manual_panel_ev" android:background="#00000000" android:layout_width="@dimen/manual_panel_button_width" android:layout_height="@dimen/manual_panel_button_height" android:src="@c0085drawable/btn_manual_panel" android:scaleType="fitXY" android:contentDescription="@string/brightness" style="@style/manual_panel_button"/>
        <com.lge.camera.components.ManualPanelButton android:id="@c0086id/manual_panel_iso" android:background="#00000000" android:layout_width="@dimen/manual_panel_button_width" android:layout_height="@dimen/manual_panel_button_height" android:src="@c0085drawable/btn_manual_panel" android:scaleType="fitXY" android:contentDescription="@string/iso_accessibility" style="@style/manual_panel_button"/>
        <com.lge.camera.components.ManualPanelButton android:id="@c0086id/manual_panel_ss" android:background="#00000000" android:layout_width="@dimen/manual_panel_button_width" android:layout_height="@dimen/manual_panel_button_height" android:src="@c0085drawable/btn_manual_panel" android:scaleType="fitXY" android:contentDescription="@string/shutter_speed" style="@style/manual_panel_button"/>
        <com.lge.camera.components.ManualPanelButton android:id="@c0086id/manual_panel_all_auto" android:background="#00000000" android:layout_width="@dimen/manual_reset_panel_button_width" android:layout_height="@dimen/manual_panel_button_height" android:src="@c0085drawable/btn_manual_ae_lock" android:scaleType="centerInside" android:contentDescription="@string/all_auto_desc" style="@style/manual_panel_button_all_auto"/>
        <com.lge.camera.components.ManualPanelButton android:id="@c0086id/manual_panel_ae_lock" android:background="#00000000" android:visibility="gone" android:layout_width="@dimen/manual_reset_panel_button_width" android:layout_height="@dimen/manual_panel_button_height" android:src="@c0085drawable/btn_manual_ae_lock" android:scaleType="fitXY" android:contentDescription="@string/switch_to_ae_lock_on_off" style="@style/manual_panel_button_ae_lock"/>
    </LinearLayout>
</RelativeLayout>
